argocd-declarative/manifests/nginx-app/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx
  annotations:
    cert-manager.io/cluster-issuer: "selfsigned-cluster-issuer"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"    
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.int.taqniat.ae
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
  tls:
  - hosts:
    - nginx.int.google.com
    secretName: nginx-cert-secret
